# nvme-cli

./: Makefile  README.md  fabrics.c  fabrics.h  meson.build  meson_options.txt  nbft.c  nvme-builtin.h  nvme-models.c  nvme-print-json.c  nvme-print-stdout.c  nvme-print.c  nvme-print.h  nvme.c  nvme.h
Documentation/: cmds-main.txt  meson.build  nvme-check-tls-key.txt  nvme-connect.txt  nvme-gen-tls-key.txt  nvme-show-topology.1  nvme-show-topology.html  nvme-supported-log-pages.txt
ccan/: meson.build
completions/: _nvme  bash-nvme-completion.sh
nvmf-autoconnect/systemd/: nvmf-connect-nbft.service.in  nvmf-connect@.service.in
nvmf-autoconnect/udev-rules/: 65-persistent-net-nbft.rules.in
plugins/netapp/: netapp-nvme.c
plugins/sed/: sedopal_cmd.c
plugins/solidigm/: solidigm-internal-logs.c
plugins/wdc/: wdc-nvme.c
subprojects/: libnvme.wrap
util/: cleanup.h  logging.c
